try build image